Fix countriesList li alignment

--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,9 @@
 }
 
 .countries_list li {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   padding: 0.5em;
   height: 100%;
 }
